<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="acc_agreement_title">User Agreement &amp; Privacy Policy</string>
    <string name="acc_success_img_folder">lottie/success/images</string>
    <string name="acc_success_path">lottie/success/data.json</string>
    <string name="accelerate_success">Optimization Succeeded</string>
    <string name="accelerate_the_weekly">Weekly</string>
    <string name="add_other_apps">Add More</string>
    <string name="add_space"> %s</string>
    <string name="advanced_settings_text">Advanced Settings</string>
    <string name="agree_acc">Agree</string>
    <string name="agreement">&lt;b>Welcome to Game Space! We attach great importance to your personal information and privacy. In order to protect your rights and comply with relevant regulatory requirements, we explain to you as follows: This Privacy Policy will help you understand the following contents:&lt;/b> &lt;br/>1.How We Collect and Use Your Personal Information &lt;br/>2.How We Store and Protect Your Personal Information &lt;br/>3.How We Share, Transfer and Disclose Your Personal Information &lt;br/>4.How Your Personal Information is Transferred Across Borders &lt;br/>5.Your Rights to Your Personal Information &lt;br/>6.How We Handle the Personal Information of Children &lt;br/>7.Third-Party Service Providers and Services &lt;br/>8.Supplement and Update of the Policy &lt;br/>9.How to Contact Us &lt;br/>&lt;b>The Terms of Use will help you understand the following contents:&lt;/b> &lt;br/>1.Game Space and its Services &lt;br/>2.Restrictions on the use of This Software and Service &lt;br/>3.Intellectual Property; Ownership &lt;br/>4.Considerations on Your Use of This Software and Service &lt;br/>5.About Updates &lt;br/>6.Software and Services Provided by Third Parties &lt;br/>7.Fees and Advertisement &lt;br/>8.Termination and Breach of Contract &lt;br/>9.Indemnification, DISCLAIMERS, LIMITATION OF LIABILITIES, Governing Laws and Dispute Resolution and Miscellaneous &lt;br/></string>
    <string name="agreement_label">Game Space</string>
    <string name="aha_hot_games_url">https://api.ahagamecenter.com/ahaGames/recommendation/os-hot</string>
    <string name="ai_content_gpdr_agreel">Agree</string>
    <string name="ai_content_gpdr_cancel">Cancel</string>
    <string name="ai_content_gpdr_notice">Notice</string>
    <string name="all_characters">All Voices</string>
    <string name="am">AM</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="anisotropic_filtration_1">Off</string>
    <string name="anisotropic_filtration_2">2</string>
    <string name="anisotropic_filtration_3">4</string>
    <string name="anisotropic_filtration_4">8</string>
    <string name="anisotropic_filtration_5">16</string>
    <string name="answer_agreement">Please tap the link below to read the %1$s and %2$s.</string>
    <string name="answer_format">A: %s</string>
    <string name="app_disabled">Unavailable in the current app status</string>
    <string name="app_name">Smart Panel</string>
    <string name="app_name_chrome">Chrome</string>
    <string name="app_name_whatsapp">WhatsApp</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_management">App Management</string>
    <string name="applock_hide_noti_content">New notification. Tap to view</string>
    <string name="apr">Apr</string>
    <string name="aug">Aug</string>
    <string name="auto_sync_consume">6.0</string>
    <string name="available_applications">Available Apps</string>
    <string name="average_latency">Average Delay</string>
    <string name="balanced_mode">Equilibrium Mode</string>
    <string name="balanced_mode_introduce">Equilibrium Mode will allocate resources according to the game and the performance of the phone.</string>
    <string name="barrage_mode">Barrage notification</string>
    <string name="barrage_mode_summary">Show WhatsApp and Messenger messages in the form of barrages</string>
    <string name="barrage_notification">Barrage Mode</string>
    <string name="battery_info_status_charging">Charging</string>
    <string name="battery_info_status_discharging">Not charging</string>
    <string name="battery_info_status_full">Full</string>
    <string name="battery_info_status_not_charging">"Plugged in, can't charge right now"</string>
    <string name="battery_info_status_unknown">Unknown</string>
    <string name="battery_saver_consume">30.0</string>
    <string name="before_delay">Preceded Delay</string>
    <string name="beta_tag">BETA</string>
    <string name="blueoffblue2_image_path">modelottie/blueoffblue2/images</string>
    <string name="blueoffblue2_json_path">modelottie/blueoffblue2/data.json</string>
    <string name="blueoffgreen_image_path">modelottie/blueoffgreen/images</string>
    <string name="blueoffgreen_json_path">modelottie/blueoffgreen/data.json</string>
    <string name="blueoffyellow_image_path">modelottie/blueoffyellow/images</string>
    <string name="blueoffyellow_json_path">modelottie/blueoffyellow/data.json</string>
    <string name="blueonblue1_image_path">modelottie/blueonblue1/images</string>
    <string name="blueonblue1_json_path">modelottie/blueonblue1/data.json</string>
    <string name="blueongreen_image_path">modelottie/blueongreen/images</string>
    <string name="blueongreen_json_path">modelottie/blueongreen/data.json</string>
    <string name="blueonyellow_image_path">modelottie/blueonyellow/images</string>
    <string name="blueonyellow_json_path">modelottie/blueonyellow/data.json</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="boy">Boy</string>
    <string name="bt_on_consume">4.1</string>
    <string name="bulletin_suspension_notice">Pop-up Notification</string>
    <string name="bypass_charging">Bypass Charging</string>
    <string name="bypass_charging_summary">"Bypass Charging reduces the phone's heating effects while extending the battery life."</string>
    <string name="bypass_charging_tips">"When your phone is connected to the original charger during gaming, the power supply will bypass the battery to power the phone directly, reducing the phone's heating effects and extending the battery life."</string>
    <string name="bypass_charging_titel">Enable Bypass Charging</string>
    <string name="bypass_open_tips">Bypass Charging enabled. Battery charging efficiency will be reduced</string>
    <string name="bypass_open_tips_no_charging">Bypass Charging enabled. Battery charging will be stopped</string>
    <string name="cancel_acc">Cancel</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="character_man">Male Voice</string>
    <string name="character_not_possess">Not Owned</string>
    <string name="character_woman">Female Voice</string>
    <string name="charge_cooling">Charging cooler</string>
    <string name="charging_percentage" formatted="false">%1$s%</string>
    <string name="charging_power">Charging Power</string>
    <string name="charging_power_summary">The percentage of power used to charge the battery</string>
    <string name="charging_threshold">Charging Threshold</string>
    <string name="control_settings_graduated_1">-2</string>
    <string name="control_settings_graduated_2">-1</string>
    <string name="control_settings_graduated_3">0</string>
    <string name="control_settings_graduated_4">1</string>
    <string name="control_settings_graduated_5">2</string>
    <string name="game_acceleration_starting">About to boost...</string>
    <string name="grapic_settings_anisotropic_filtration">Anisotropic Filtering</string>
    <string name="grapic_settings_anisotropic_filtration_introduce">"Optimizes the perception of texture on an object's surface; the stronger the texture, the higher the rating."</string>
    <string name="grapic_settings_mipmap_LOD_offset">Mipmap LOD Offset</string>
    <string name="grapic_settings_mipmap_LOD_offset_introduce">Fineness of game texture. Adjusting backwards reduces image quality while boosting performance. (Shifting up softens the image while boosting performance; shifting down improves image sharpness.)</string>
    <string name="grapic_settings_texture_filter_quality">Texture Filter</string>
    <string name="grapic_settings_texture_filter_quality_introduce">Adjust for higher image quality or higher processing speed.</string>
    <string name="micro_control_accuracy">Micro Control Accuracy</string>
    <string name="micro_control_accuracy_detail">Higher accuracy enables more precise identification of micro controls, while lower accuracy reduces sensitivity to these controls but improves operational stability.</string>
    <string name="mipmap_LOD_offset_1">Default</string>
    <string name="mipmap_LOD_offset_2">4</string>
    <string name="mipmap_LOD_offset_3">8</string>
    <string name="mipmap_LOD_offset_4">16</string>
    <string name="more_app_info">App details</string>
    <string name="more_optimize_off">Turn off Optimization</string>
    <string name="more_optimize_on">Turn on Optimization</string>
    <string name="more_remove_gamemode">Disable Game Mode</string>
    <string name="pubg_balanced">Equilibrium mode</string>
    <string name="pubg_picture_quality">Quality priority</string>
    <string name="pubg_smooth">Smooth mode</string>
    <string name="rocket_img_folder">lottie/rocket/images</string>
    <string name="rocket_path">lottie/rocket/data.json</string>
    <string name="texture_filter_quality_1">Speed First</string>
    <string name="texture_filter_quality_2">Equalization</string>
    <string name="texture_filter_quality_3">Quality First</string>
    <string name="tip_may_increase_power">This may increase power consumption &amp; phone temperature.</string>
</resources>