<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="#99000000" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.airbnb.lottie.LottieAnimationView android:id="@id/av_rocket" android:layout_width="@dimen/rocket_width" android:layout_height="@dimen/rocket_width" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:lottie_autoPlay="true" app:lottie_fileName="@string/rocket_path" app:lottie_imageAssetsFolder="@string/rocket_img_folder" app:lottie_repeatCount="-1" app:lottie_repeatMode="restart" />
    <TextView android:textSize="14.0sp" android:textColor="#ffffffff" android:id="@id/txv_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/game_acceleration_starting" app:layout_constraintBottom_toBottomOf="@id/av_rocket" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
    <TextView android:textSize="12.0sp" android:textColor="#ffffffff" android:gravity="center_horizontal" android:id="@id/txv_desc_second" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:maxWidth="475.0dip" android:text="@string/tip_may_increase_power" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/txv_desc" />
</androidx.constraintlayout.widget.ConstraintLayout>