<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/pop_window_layout" android:paddingTop="4.0dip" android:paddingBottom="4.0dip" android:layout_width="@dimen/pop_window_width" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RadioGroup android:id="@id/game_space_group" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginStart="15.0dip">
        <RadioButton android:textSize="10.0dip" android:textColor="@color/radio_text_selector_color" android:ellipsize="end" android:id="@id/game_space_radio_1" android:layout_width="wrap_content" android:layout_height="36.0dip" android:text="@string/pubg_picture_quality" android:maxLines="1" android:paddingStart="8.0dip" style="@style/game_space_radio" />
        <RadioButton android:textSize="10.0dip" android:textColor="@color/radio_text_selector_color" android:ellipsize="end" android:id="@id/game_space_radio_2" android:layout_width="wrap_content" android:layout_height="36.0dip" android:text="@string/pubg_balanced" android:maxLines="1" android:paddingStart="8.0dip" style="@style/game_space_radio" />
        <RadioButton android:textSize="10.0dip" android:textColor="@color/radio_text_selector_color" android:ellipsize="end" android:id="@id/game_space_radio_3" android:layout_width="wrap_content" android:layout_height="36.0dip" android:text="@string/pubg_smooth" android:maxLines="1" android:paddingStart="8.0dip" style="@style/game_space_radio" />
        <RadioButton android:textSize="10.0dip" android:textColor="@color/radio_text_selector_color" android:ellipsize="end" android:id="@id/game_space_radio_off" android:layout_width="wrap_content" android:layout_height="36.0dip" android:text="@string/more_optimize_off" android:maxLines="1" android:paddingStart="8.0dip" style="@style/game_space_radio" />
        <RadioButton android:textSize="10.0dip" android:textColor="@color/radio_text_selector_color" android:ellipsize="end" android:id="@id/game_space_radio_on" android:layout_width="wrap_content" android:layout_height="36.0dip" android:text="@string/more_optimize_on" android:maxLines="1" android:paddingStart="8.0dip" style="@style/game_space_radio" />
    </RadioGroup>
    <ImageView android:id="@id/linel_view" android:background="#80979797" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginTop="4.0dip" android:layout_marginBottom="4.0dip" android:layout_marginStart="12.0dip" android:layout_marginEnd="12.0dip" />
    <LinearLayout android:gravity="center_vertical" android:id="@id/remove_layout" android:layout_width="fill_parent" android:layout_height="36.0dip" android:layout_marginStart="2.0dip" android:layout_marginEnd="2.0dip">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_icon_moveout" android:layout_marginStart="12.0dip" />
        <TextView android:textSize="10.0dip" android:textColor="#ffffffff" android:ellipsize="end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/more_remove_gamemode" android:maxLines="1" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" />
    </LinearLayout>
    <LinearLayout android:gravity="center_vertical" android:id="@id/app_info_layout" android:layout_width="fill_parent" android:layout_height="36.0dip" android:layout_marginStart="2.0dip" android:layout_marginEnd="2.0dip">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_icon_information" android:layout_marginStart="12.0dip" />
        <TextView android:textSize="10.0dip" android:textColor="#ffffffff" android:ellipsize="end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/more_app_info" android:maxLines="1" android:layout_marginStart="8.0dip" android:layout_marginEnd="20.0dip" />
    </LinearLayout>
</LinearLayout>