<?xml version="1.0" encoding="utf-8"?>
<merge android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <Space android:layout_width="fill_parent" android:layout_height="36.0dip" />
    <androidx.constraintlayout.widget.ConstraintLayout android:orientation="horizontal" android:id="@id/grapic_settings_layout" android:layout_width="fill_parent" android:layout_height="65.0dip">
        <com.transsion.gamespace.View.LengthAdaptiveView android:textSize="12.0dip" android:textColor="#ffffffff" android:id="@id/tv_grapic_settings_anisotropic_filtration" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxWidth="120.0dip" android:text="@string/grapic_settings_anisotropic_filtration" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <com.transsion.gamespace.View.DialogImageView android:id="@id/anisotropic_filtration_question" android:padding="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_question" app:dialogText="@string/grapic_settings_anisotropic_filtration_introduce" app:dialogTitle="@string/grapic_settings_anisotropic_filtration" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@id/tv_grapic_settings_anisotropic_filtration" app:layout_constraintTop_toTopOf="parent" />
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@id/tv_grapic_settings_anisotropic_filtration">
            <com.transsion.gamespace.View.CustomSeekBar android:id="@id/anisotropic_filtration_seekbar" android:layout_width="362.0dip" android:layout_height="58.0dip" android:layout_marginTop="-24.0dip" android:max="5" android:progress="1" android:min="1" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/game_space_seekbar" />
            <TextView android:textSize="9.0dip" android:textColor="#80ffffff" android:id="@id/tv_1_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="-23.0dip" android:text="@string/anisotropic_filtration_1" android:layout_marginStart="10.0dip" app:layout_constraintStart_toStartOf="@id/anisotropic_filtration_seekbar" app:layout_constraintTop_toBottomOf="@id/anisotropic_filtration_seekbar" />
            <TextView android:textSize="9.0dip" android:textColor="#80ffffff" android:id="@id/tv_1_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/anisotropic_filtration_2" app:layout_constraintEnd_toEndOf="@id/anisotropic_filtration_seekbar" app:layout_constraintHorizontal_bias="0.27" app:layout_constraintStart_toStartOf="@id/anisotropic_filtration_seekbar" app:layout_constraintTop_toTopOf="@id/tv_1_1" />
            <TextView android:textSize="9.0dip" android:textColor="#80ffffff" android:id="@id/tv_1_3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/anisotropic_filtration_3" app:layout_constraintEnd_toEndOf="@id/anisotropic_filtration_seekbar" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="@id/anisotropic_filtration_seekbar" app:layout_constraintTop_toTopOf="@id/tv_1_1" />
            <TextView android:textSize="9.0dip" android:textColor="#80ffffff" android:id="@id/tv_1_4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/anisotropic_filtration_4" app:layout_constraintEnd_toEndOf="@id/anisotropic_filtration_seekbar" app:layout_constraintHorizontal_bias="0.73" app:layout_constraintStart_toStartOf="@id/anisotropic_filtration_seekbar" app:layout_constraintTop_toTopOf="@id/tv_1_1" />
            <TextView android:textSize="9.0dip" android:textColor="#80ffffff" android:id="@id/tv_1_5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/anisotropic_filtration_5" android:layout_marginEnd="10.0dip" app:layout_constraintEnd_toEndOf="@id/anisotropic_filtration_seekbar" app:layout_constraintTop_toTopOf="@id/tv_1_1" />
            <View android:id="@id/anisotropic_filtration_seekbar_click" android:layout_width="0.0dip" android:layout_height="0.0dip" app:layout_constraintBottom_toBottomOf="@id/anisotropic_filtration_seekbar" app:layout_constraintEnd_toEndOf="@id/anisotropic_filtration_seekbar" app:layout_constraintStart_toStartOf="@id/anisotropic_filtration_seekbar" app:layout_constraintTop_toTopOf="@id/anisotropic_filtration_seekbar" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="65.0dip">
        <com.transsion.gamespace.View.LengthAdaptiveView android:textSize="12.0dip" android:textColor="#ffffffff" android:id="@id/tv_grapic_settings_texture_filter_quality" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxWidth="120.0dip" android:text="@string/grapic_settings_texture_filter_quality" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <com.transsion.gamespace.View.DialogImageView android:id="@id/texture_filter_quality_question" android:padding="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_question" app:dialogText="@string/grapic_settings_texture_filter_quality_introduce" app:dialogTitle="@string/grapic_settings_texture_filter_quality" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@id/tv_grapic_settings_texture_filter_quality" app:layout_constraintTop_toTopOf="parent" />
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@id/tv_grapic_settings_texture_filter_quality">
            <com.transsion.gamespace.View.CustomSeekBar android:id="@id/texture_filter_seekbar" android:layout_width="362.0dip" android:layout_height="58.0dip" android:layout_marginTop="-24.0dip" android:max="3" android:progress="2" android:min="1" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/game_space_seekbar" />
            <TextView android:textSize="9.0dip" android:textColor="#80ffffff" android:ellipsize="end" android:id="@id/tv_2_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="-23.0dip" android:maxWidth="100.0dip" android:text="@string/texture_filter_quality_1" android:lines="1" android:layout_marginStart="10.0dip" app:layout_constraintStart_toStartOf="@id/texture_filter_seekbar" app:layout_constraintTop_toBottomOf="@id/texture_filter_seekbar" />
            <TextView android:textSize="9.0dip" android:textColor="#80ffffff" android:ellipsize="end" android:id="@id/tv_2_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxWidth="100.0dip" android:text="@string/texture_filter_quality_2" android:lines="1" app:layout_constraintEnd_toEndOf="@id/texture_filter_seekbar" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="@id/texture_filter_seekbar" app:layout_constraintTop_toTopOf="@id/tv_2_1" />
            <TextView android:textSize="9.0dip" android:textColor="#80ffffff" android:ellipsize="end" android:id="@id/tv_2_3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxWidth="100.0dip" android:text="@string/texture_filter_quality_3" android:lines="1" android:layout_marginEnd="10.0dip" app:layout_constraintEnd_toEndOf="@id/texture_filter_seekbar" app:layout_constraintTop_toTopOf="@id/tv_2_1" />
            <View android:id="@id/texture_filter_seekbar_click" android:layout_width="0.0dip" android:layout_height="0.0dip" app:layout_constraintBottom_toBottomOf="@id/texture_filter_seekbar" app:layout_constraintEnd_toEndOf="@id/texture_filter_seekbar" app:layout_constraintStart_toStartOf="@id/texture_filter_seekbar" app:layout_constraintTop_toTopOf="@id/texture_filter_seekbar" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout android:orientation="horizontal" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="65.0dip">
        <com.transsion.gamespace.View.LengthAdaptiveView android:textSize="12.0dip" android:textColor="#ffffffff" android:id="@id/mipmap_LOD_offset" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxWidth="120.0dip" android:text="@string/grapic_settings_mipmap_LOD_offset" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <com.transsion.gamespace.View.DialogImageView android:id="@id/mipmap_LOD_offset_question" android:padding="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_question" app:dialogText="@string/grapic_settings_mipmap_LOD_offset_introduce" app:dialogTitle="@string/grapic_settings_mipmap_LOD_offset" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@id/mipmap_LOD_offset" app:layout_constraintTop_toTopOf="parent" />
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="@id/mipmap_LOD_offset" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@id/mipmap_LOD_offset">
            <com.transsion.gamespace.View.CustomSeekBar android:id="@id/mipmap_offset_seekbar" android:layout_width="362.0dip" android:layout_height="58.0dip" android:layout_marginTop="-4.0dip" android:max="4" android:progress="1" android:min="1" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/game_space_seekbar" />
            <TextView android:textSize="9.0dip" android:textColor="#80ffffff" android:ellipsize="end" android:id="@id/tv_3_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="-23.0dip" android:maxWidth="60.0dip" android:text="@string/mipmap_LOD_offset_1" android:lines="1" android:layout_marginStart="10.0dip" app:layout_constraintStart_toStartOf="@id/mipmap_offset_seekbar" app:layout_constraintTop_toBottomOf="@id/mipmap_offset_seekbar" />
            <TextView android:textSize="9.0dip" android:textColor="#80ffffff" android:id="@id/tv_3_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mipmap_LOD_offset_2" app:layout_constraintEnd_toEndOf="@id/mipmap_offset_seekbar" app:layout_constraintHorizontal_bias="0.34" app:layout_constraintStart_toStartOf="@id/mipmap_offset_seekbar" app:layout_constraintTop_toTopOf="@id/tv_3_1" />
            <TextView android:textSize="9.0dip" android:textColor="#80ffffff" android:id="@id/tv_3_3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mipmap_LOD_offset_3" app:layout_constraintEnd_toEndOf="@id/mipmap_offset_seekbar" app:layout_constraintHorizontal_bias="0.66" app:layout_constraintStart_toStartOf="@id/mipmap_offset_seekbar" app:layout_constraintTop_toTopOf="@id/tv_3_1" />
            <TextView android:textSize="9.0dip" android:textColor="#80ffffff" android:id="@id/tv_3_4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mipmap_LOD_offset_4" android:layout_marginEnd="10.0dip" app:layout_constraintEnd_toEndOf="@id/mipmap_offset_seekbar" app:layout_constraintTop_toTopOf="@id/tv_3_1" />
            <View android:id="@id/mipmap_offset_seekbar_click" android:layout_width="0.0dip" android:layout_height="0.0dip" app:layout_constraintBottom_toBottomOf="@id/mipmap_offset_seekbar" app:layout_constraintEnd_toEndOf="@id/mipmap_offset_seekbar" app:layout_constraintStart_toStartOf="@id/mipmap_offset_seekbar" app:layout_constraintTop_toTopOf="@id/mipmap_offset_seekbar" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</merge>