<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:orientation="horizontal" android:id="@id/micro_control_layout" android:layout_width="fill_parent" android:layout_height="65.0dip" android:layout_marginStart="40.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.transsion.gamespace.View.LengthAdaptiveView android:textSize="12.0dip" android:textColor="#ffffffff" android:id="@id/micro_control_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxWidth="120.0dip" android:text="@string/micro_control_accuracy" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <com.transsion.gamespace.View.DialogImageView android:id="@id/micro_control_question" android:padding="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_question" app:dialogText="@string/micro_control_accuracy_detail" app:dialogTitle="@string/micro_control_accuracy" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@id/micro_control_title" app:layout_constraintTop_toTopOf="parent" />
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="@id/micro_control_title" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@id/micro_control_title">
        <com.transsion.gamespace.View.CenterSeekBar android:id="@id/micro_control_seekbar" android:layout_width="347.0dip" android:layout_height="48.0dip" android:layout_marginTop="10.0dip" android:layout_marginEnd="-7.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" app:max="5" app:min="1" app:progress="3" style="@style/game_space_seekbar" />
        <TextView android:textSize="9.0dip" android:textColor="#80ffffff" android:id="@id/tv_4_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="-26.0dip" android:text="@string/control_settings_graduated_1" android:layout_marginStart="5.0dip" app:layout_constraintStart_toStartOf="@id/micro_control_seekbar" app:layout_constraintTop_toBottomOf="@id/micro_control_seekbar" />
        <TextView android:textSize="9.0dip" android:textColor="#80ffffff" android:id="@id/tv_4_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/control_settings_graduated_2" app:layout_constraintEnd_toEndOf="@id/micro_control_seekbar" app:layout_constraintHorizontal_bias="0.25" app:layout_constraintStart_toStartOf="@id/micro_control_seekbar" app:layout_constraintTop_toTopOf="@id/tv_4_1" />
        <TextView android:textSize="9.0dip" android:textColor="#80ffffff" android:id="@id/tv_4_3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/control_settings_graduated_3" app:layout_constraintEnd_toEndOf="@id/micro_control_seekbar" app:layout_constraintHorizontal_bias="0.48" app:layout_constraintStart_toStartOf="@id/micro_control_seekbar" app:layout_constraintTop_toTopOf="@id/tv_4_1" />
        <TextView android:textSize="9.0dip" android:textColor="#80ffffff" android:id="@id/tv_4_4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/control_settings_graduated_4" app:layout_constraintEnd_toEndOf="@id/micro_control_seekbar" app:layout_constraintHorizontal_bias="0.7" app:layout_constraintStart_toStartOf="@id/micro_control_seekbar" app:layout_constraintTop_toTopOf="@id/tv_4_1" />
        <TextView android:textSize="9.0dip" android:textColor="#80ffffff" android:id="@id/tv_4_5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/control_settings_graduated_5" android:layout_marginEnd="18.0dip" app:layout_constraintEnd_toEndOf="@id/micro_control_seekbar" app:layout_constraintTop_toTopOf="@id/tv_4_1" />
        <View android:id="@id/micro_control_seekbar_click" android:layout_width="0.0dip" android:layout_height="0.0dip" app:layout_constraintBottom_toBottomOf="@id/micro_control_seekbar" app:layout_constraintEnd_toEndOf="@id/micro_control_seekbar" app:layout_constraintStart_toStartOf="@id/micro_control_seekbar" app:layout_constraintTop_toTopOf="@id/micro_control_seekbar" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>